--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,8 +9,8 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "_posts/2020-06-17-Mongolian-Electoral-District-Demographic-Analysis.md",
-            "mode": "source"
+            "file": "_posts/2019-05-20-Mongolian-meat-price-time-series-forecast.md",
+            "mode": "preview"
           }
         }
       }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "_posts/2020-06-17-Mongolian-Electoral-District-Demographic-Analysis.md",
+                "file": "_posts/2019-05-20-Mongolian-meat-price-time-series-forecast.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,15 +88,15 @@
   },
   "active": "464ec207386093c1",
   "lastOpenFiles": [
+    "_posts/2019-05-20-Mongolian-meat-price-time-series-forecast.md",
+    "images/meat_prices/animal_losses.png",
+    "images/meat_prices/forecast.png",
+    "_posts/2019-09-18-Sqair-real-world-test.md",
+    "images/meat_prices/beed.png",
+    "_posts/Untitled.md",
+    "_posts/2020-12-18-Australias-loss-Mongolias-gain-coal.md",
     "_posts/2020-06-17-Mongolian-Electoral-District-Demographic-Analysis.md",
     "README.md",
-    "_pages/about.md",
-    "_site/README.md",
-    "_drafts/2021-05-16-Faceook_s Political Ad Policy in Mongolia.md",
-    "_posts/2021-05-16-Faceook_s Political Ad Policy in Mongolia.md",
-    "_posts/2021-02-15-Mongolias-150-000-License-Plate.md",
-    "_posts/2019-09-18-Sqair-real-world-test.md",
-    "_posts/2019-02-13-Ethical-matrix-dzud-forecasting.md",
-    "_posts/2019-02-08-Tsagaan-Sar-debt-cycle.md"
+    "_pages/about.md"
   ]
 }
