added link to github folder in fuel shortage article

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -10,7 +10,7 @@
           "type": "markdown",
           "state": {
             "file": "_posts/2021-09-21-Mongolias-fuel-shortage.md",
-            "mode": "preview"
+            "mode": "source"
           }
         }
       }
